# educative_ai_courses

./: .gitignore  CHANGELOG.md
generative-ai-essentials/: Bag_of_words.py  Glove-like.py  TF-IDF.py  Text_Preprocessing.py  continuous_BOW.py  n-gram.py  skip_gram.py  transformer_example.py
gradio_chatbot/: pyproject.toml  requirements-rasa.txt  requirements.txt
gradio_chatbot/Rasa_demo/: config.yml  domain.yml  main.py
gradio_chatbot/Rasa_demo/data/: nlu.yml  rules.yml  stories.yml
gradio_chatbot/basic_chatbot/: README.md  app.py  run.sh
gradio_chatbot/basic_chatbot/utils/: model.py
gradio_chatbot/educative_chatbot/: Groq_chatbot.py  RAG_LlamaIndex.py  gemini_groq_chatbot.py  main.py  ollama_chatbot.py  pattern-matching_bot.py  rule_based_bot.py  speech_to_text_chatbot.py  streaming_chatbot.py
scripts/: log_changelog.py
